--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Mega:wght@100..900&family=Mada:wght@200..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+:root{
+ --darkBlue: #03045E;
+ --lightBlue : #CAF0F8 ;
+ --darkText : #313144 ; 
+ --borderColor : #B8BBC2 ; 
+ --smallText : #344054 ; 
+ --blueColor : #0077B6 ; 
+ --lightTextGray : #667085 ; 
+ --darkGreen : #037847 ; 
 }
