--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Mega:wght@100..900&family=Mada:wght@200..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
  --darkBlue: #03045E;
@@ -14,4 +15,12 @@
  --blueColor : #0077B6 ; 
  --lightTextGray : #667085 ; 
  --darkGreen : #037847 ; 
+ --cardTeamBg : #CAF0F8 ; 
+ --cardTaskBg : #D4CEFF ; 
 }
+
+input[type='checkbox'] {
+    accent-color: #FF7E36;
+
+}
+
